--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                                 <p>Thôn Đại Lộc, Xã Gia Bình, Bắc Ninh</p>
                             </div>
                             <button class="btn-map-outline"
-                                onclick="window.open('https://maps.app.goo.gl/YtTHCg2Xq4J5fJPv8', '_blank')">Xem Chỉ
+                                onclick="window.open('https://maps.app.goo.gl/cVan6FPdafaxrfJC9', '_blank')">Xem Chỉ
                                 Đường</button>
                         </div>
                         <div class="loc-divider" style="width: 100%;"></div>
@@ -273,6 +273,7 @@
         <div class="section-container">
             <h2 class="section-title" data-aos="fade-up">Khoảnh Khắc Hạnh Phúc</h2>
             <div class="couple-divider" data-aos="zoom-in"></div>
+
             <div class="gallery-grid">
                 <div class="gallery-item" data-aos="zoom-in-up" data-aos-duration="1000">
                     <img src="images/gallery-1.jpg" alt="Wedding Photo 1">
@@ -393,8 +394,8 @@
             <span class="close-modal" onclick="closeGiftModal()">&times;</span>
             <h2 class="modal-title">Gửi Mừng Cưới</h2>
             <div class="qr-container">
-                <img src="images/qr.png" alt="QR Code chuyển khoản mừng cưới" class="qr-code">
-                <p class="qr-caption">Quét mã QR để gửi mừng cưới tới gia đình chúng tôi. Xin chân thành cảm ơn!</p>
+                <img src="images/qr2.png" alt="QR Code chuyển khoản mừng cưới" class="qr-code">
+                <p class="qr-caption">Chúc mừng hạnh phúc!</p>
             </div>
         </div>
     </div>
