--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <!-- Hero Section -->
-    <section class="hero-section" style="background-image: url('images/hero-bg.jpg');">
+    <section class="hero-section" style="background-image: url('images/1.1.JPG');">
         <div class="hero-content" data-aos="fade-up" data-aos-duration="1500">
             <div class="hero-badge">THƯ MỜI CƯỚI</div>
             <h3 class="hero-names-script">Sỹ Khởi & Nguyễn Hiền</h3>
@@ -40,13 +40,13 @@
 
                 <div class="invitation-images" data-aos="fade-up">
                     <div class="inv-img-side">
-                        <img src="images/groom.jpg" alt="Groom">
+                        <img src="images/9.jpg" alt="Groom">
                     </div>
                     <div class="inv-img-center">
-                        <img src="images/hero-bg.jpg" alt="Couple">
+                        <img src="images/5.JPG" alt="Couple">
                     </div>
                     <div class="inv-img-side">
-                        <img src="images/bride.jpg" alt="Bride">
+                        <img src="images/7.JPG" alt="Bride">
                     </div>
                 </div>
             </div>
@@ -276,19 +276,16 @@
 
             <div class="gallery-grid">
                 <div class="gallery-item" data-aos="zoom-in-up" data-aos-duration="1000">
-                    <img src="images/gallery-1.jpg" alt="Wedding Photo 1">
-                </div>
-                <div class="gallery-item" data-aos="flip-left" data-aos-duration="1200" data-aos-delay="100">
-                    <img src="images/gallery-2.jpg" alt="Wedding Photo 2">
+                    <img src="images/5.JPG" alt="Wedding Photo 1">
                 </div>
                 <div class="gallery-item" data-aos="zoom-in-right" data-aos-duration="1000" data-aos-delay="200">
-                    <img src="images/hero-bg.jpg" alt="Wedding Photo 3">
+                    <img src="images/7.JPG" alt="Wedding Photo 3">
                 </div>
                 <div class="gallery-item" data-aos="flip-right" data-aos-duration="1200" data-aos-delay="300">
-                    <img src="images/groom.jpg" alt="Wedding Photo 4">
+                    <img src="images/8.JPG" alt="Wedding Photo 4">
                 </div>
                 <div class="gallery-item" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400">
-                    <img src="images/bride.jpg" alt="Wedding Photo 5">
+                    <img src="images/1.1.JPG" alt="Wedding Photo 5">
                 </div>
             </div>
         </div>
@@ -394,7 +391,7 @@
             <span class="close-modal" onclick="closeGiftModal()">&times;</span>
             <h2 class="modal-title">Gửi Mừng Cưới</h2>
             <div class="qr-container">
-                <img src="images/qr2.png" alt="QR Code chuyển khoản mừng cưới" class="qr-code">
+                <img src="images/qr.png" alt="QR Code chuyển khoản mừng cưới" class="qr-code">
                 <p class="qr-caption">Chúc mừng hạnh phúc!</p>
             </div>
         </div>
