--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
 
                 <div class="invitation-images" data-aos="fade-up">
                     <div class="inv-img-side">
-                        <img src="images/9.jpg" alt="Groom">
+                        <img src="images/10.JPG" alt="Groom">
                     </div>
                     <div class="inv-img-center">
-                        <img src="images/5.JPG" alt="Couple">
+                        <img src="images/12.JPG" alt="Couple">
                     </div>
                     <div class="inv-img-side">
-                        <img src="images/7.JPG" alt="Bride">
+                        <img src="images/14.JPG" alt="Bride">
                     </div>
                 </div>
             </div>
@@ -243,7 +243,7 @@
                                 <p>Thôn Đại Lộc, Xã Gia Bình, Bắc Ninh</p>
                             </div>
                             <button class="btn-map-outline"
-                                onclick="window.open('https://maps.app.goo.gl/cVan6FPdafaxrfJC9', '_blank')">Xem Chỉ
+                                onclick="window.open('https://maps.app.goo.gl/vJKv8fUTssKQa9Ue8', '_blank')">Xem Chỉ
                                 Đường</button>
                         </div>
                         <div class="loc-divider" style="width: 100%;"></div>
@@ -285,8 +285,8 @@
                     <img src="images/8.JPG" alt="Wedding Photo 4">
                 </div>
                 <div class="gallery-item" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400">
-                    <img src="images/1.1.JPG" alt="Wedding Photo 5">
-                </div>
+                    <img src="images/15.JPG" alt="Wedding Photo 5">
+                </div>  
             </div>
         </div>
     </section>
