--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                     <img src="images/7.JPG" alt="Wedding Photo 3">
                 </div>
                 <div class="gallery-item" data-aos="flip-right" data-aos-duration="1200" data-aos-delay="300">
-                    <img src="images/8.JPG" alt="Wedding Photo 4">
+                    <img src="images/9.JPG" alt="Wedding Photo 4">
                 </div>
                 <div class="gallery-item" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400">
                     <img src="images/15.JPG" alt="Wedding Photo 5">
@@ -350,7 +350,7 @@
         </svg>
     </button>
 
-    <audio id="bgMusic" loop autoplay preload="auto">
+    <audio id="bgMusic" autoplay preload="auto">
         <source src="images/leduong.mp3" type="audio/mp3">
     </audio>
 
