--- a/index.html
+++ b/index.html
@@ -4,21 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>THƯ MỜI CƯỚI - MẠNH KIÊN & HOÀNG HỒNG</title>
+    <title>THƯ MỜI CƯỚI - SỸ KHỞI & NGUYỄN HIỀN</title>
     <meta name="description" content="Trân trọng kính mời bạn đến dự lễ thành hôn của chúng tôi">
 
     <!-- Open Graph / Facebook / Zalo -->
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Thư Mời Cưới - Mạnh Kiên & Hoàng Hồng">
-    <meta property="og:description" content="Trân trọng kính mời bạn đến dự lễ thành hôn của chúng tôi vào ngày 21/12/2025.">
-    <meta property="og:image" content="images/1.jpg">
-    <meta property="og:image:alt" content="Ảnh cưới Mạnh Kiên & Hoàng Hồng">
+    <meta property="og:title" content="THƯ MỜI CƯỚI - SỸ KHỞI & NGUYỄN HIỀN">
+    <meta property="og:description" content="Trân trọng kính mời bạn đến dự lễ thành hôn của chúng tôi">
+    <meta property="og:image" content="images/1.1.JPG">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
 
-    <!-- Twitter -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Thư Mời Cưới - Mạnh Kiên & Hoàng Hồng">
-    <meta name="twitter:description" content="Trân trọng kính mời bạn đến dự lễ thành hôn của chúng tôi vào ngày 21/12/2025.">
-    <meta name="twitter:image" content="images/1.jpg">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -30,10 +26,10 @@
 
 <body>
     <!-- Hero Section -->
-    <section class="hero-section" style="background-image: url('images/1.jpg');">
+    <section class="hero-section" style="background-image: url('images/1.1.JPG');">
         <div class="hero-content" data-aos="fade-up" data-aos-duration="1500">
             <div class="hero-badge">THƯ MỜI CƯỚI</div>
-            <h3 class="hero-names-script">Mạnh Kiên & Hoàng Hồng</h3>
+            <h3 class="hero-names-script">Sỹ Khởi & Nguyễn Hiền</h3>
         </div>
         <div class="scroll-indicator">
             <div class="mouse">
@@ -48,18 +44,18 @@
             <!-- Header & Images (Image 5) -->
             <div class="invitation-box">
                 <div class="invitation-header" data-aos="fade-up">
-                    <p class="invitation-quote">“Hôn nhân là chuyện cả đời.<br>Yêu người vừa ý, cưới người mình thương...”</p>
+                    <p class="invitation-quote">"Quyết Định Bên Nhau Trọn Đời"</p>
                 </div>
 
                 <div class="invitation-images" data-aos="fade-up">
                     <div class="inv-img-side">
-                        <img src="images/2.jpg" alt="Groom">
+                        <img src="images/10.JPG" alt="Groom">
                     </div>
                     <div class="inv-img-center">
-                        <img src="images/4.jpg" alt="Couple">
+                        <img src="images/12.JPG" alt="Couple">
                     </div>
                     <div class="inv-img-side">
-                        <img src="images/3.jpg" alt="Bride">
+                        <img src="images/14.JPG" alt="Bride">
                     </div>
                 </div>
             </div>
@@ -71,35 +67,36 @@
                 <div class="family-grid">
                     <div class="family-col">
                         <h3 class="family-title">NHÀ TRAI</h3>
-                        <p class="parent-name">Ông: NGUYỄN VĂN DỰ</p>
-                        <p class="parent-name">Bà: TRẦN THỊ NỘI</p>
-                        <p class="family-address">SỐ 71 ĐƯỜNG 3/2, TỔ 1, KHỐI 28, PHƯỜNG KỲ LỪA, TỈNH LẠNG SƠN</p>
+                        <p class="parent-name">Ông: Nguyễn Sỹ Nghĩa</p>
+                        <p class="parent-name">Bà: Trần Thị Cúc</p>
+                        <p class="family-address">Thôn Đại Lộc, Xã Gia Bình, Bắc Ninh</p>
                     </div>
                     <div class="family-col">
                         <h3 class="family-title">NHÀ GÁI</h3>
-                        <p class="parent-name">Bà: CHU THỊ LÝ</p>
-                        <br>
-                        <p class="family-address">SỐ 2 PHAN ĐĂNG LƯU, KHU N16, PHƯỜNG KỲ LỬA, TỈNH LẠNG SƠN</p>
+                        <p class="parent-name">Ông: Nguyễn Văn Chức</p>
+                        <p class="parent-name">Bà: Nguyễn Thị Hiên</p>
+                        <p class="family-address">Thôn Nội Phú, Gia Bình, Bắc Ninh</p>
                     </div>
                 </div>
 
                 <div class="couple-names-layout">
                     <div class="couple-col">
                         <p class="couple-role">Chú Rể</p>
-                        <h3 class="couple-name-script">Mạnh Kiên</h3>
+                        <h3 class="couple-name-script">Sỹ Khởi</h3>
                     </div>
                     <div class="heart-divider">
-                        <svg viewBox="0 0 24 24" fill="#e53935" stroke="none">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1">
                             <path
                                 d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z" />
                         </svg>
                     </div>
                     <div class="couple-col">
                         <p class="couple-role">Cô Dâu</p>
-                        <h3 class="couple-name-script">Hoàng Hồng</h3>
+                        <h3 class="couple-name-script">Nguyễn Hiền</h3>
                     </div>
                 </div>
             </div>
+
             <!-- Ceremony Date (Image 4) -->
             <div class="invitation-box">
                 <div class="ceremony-date-box" data-aos="zoom-in">
@@ -108,11 +105,11 @@
 
                     <div class="date-display-row">
                         <div class="date-col left">
-                            <span class="time-big">14 giờ 00</span>
+                            <span class="time-big">11 giờ 15</span>
                         </div>
                         <div class="date-col center">
                             <span class="day-top">Chủ Nhật</span>
-                            <span class="date-big">21</span>
+                            <span class="date-big">28</span>
                             <span class="month-bottom">Tháng 12</span>
                         </div>
                         <div class="date-col right">
@@ -121,7 +118,7 @@
                     </div>
                 </div>
 
-                <p class="lunar-date">(Tức Ngày 02 Tháng 11 Năm Ất Tỵ)</p>
+                <p class="lunar-date">(Tức Ngày 09 Tháng 11 Năm Ất Tỵ)</p>
             </div>
         </div>
     </section>
@@ -136,9 +133,9 @@
             <div class="party-card-new">
                 <h3 class="party-title-new">LỄ THÀNH HÔN</h3>
                 <div class="party-time-new">
-                    <p>Chủ Nhật - 14:00</p>
-                    <p class="party-date-bold">21 . 12 . 2025</p>
-                    <p class="party-lunar-small">(Tức Ngày 02 Tháng 11 Năm Ất Tỵ)</p>
+                    <p>Chủ Nhật - 11:15</p>
+                    <p class="party-date-bold">28 . 12 . 2025</p>
+                    <p class="party-lunar-small">(Tức Ngày 09 Tháng 11 Năm Ất Tỵ)</p>
                 </div>
                 <p class="party-place-new">Tại Tư Gia Nhà Trai</p>
 
@@ -152,9 +149,9 @@
             <div class="party-card-new">
                 <h3 class="party-title-new">LỄ VU QUY</h3>
                 <div class="party-time-new">
-                    <p>Chủ Nhật - 14:00</p>
-                    <p class="party-date-bold">21 . 12 . 2025</p>
-                    <p class="party-lunar-small">(Tức Ngày 02 Tháng 11 Năm Ất Tỵ)</p>
+                    <p>Chủ Nhật - 11:15</p>
+                    <p class="party-date-bold">28 . 12 . 2025</p>
+                    <p class="party-lunar-small">(Tức Ngày 09 Tháng 11 Năm Ất Tỵ)</p>
                 </div>
                 <p class="party-place-new">Tại Tư Gia Nhà Gái</p>
 
@@ -167,13 +164,6 @@
         <!-- Calendar -->
         <div class="calendar-box" data-aos="fade-up">
             <h3 class="calendar-title">THÁNG 12 - 2025</h3>
-            <div class="decorative-divider-custom">
-                <svg width="100%" height="40" viewBox="0 0 300 40" preserveAspectRatio="none" fill="none" stroke="currentColor" stroke-width="1.5">
-                    <path d="M0,30 Q150,10 260,25" />
-                    <path d="M260,25 C255,15 265,10 270,18 C275,10 285,15 280,25 C280,25 270,35 270,35 C270,35 260,25 260,25" />
-                    <path d="M280,25 Q290,30 300,28" />
-                </svg>
-            </div>
             <div class="calendar-grid">
                 <div class="cal-header">T2</div>
                 <div class="cal-header">T3</div>
@@ -207,21 +197,8 @@
                 <div class="cal-day">17</div>
                 <div class="cal-day">18</div>
                 <div class="cal-day">19</div>
-                 <div class="cal-day active-heart">
-                    <span>20</span>
-                    <svg class="heart-icon" viewBox="0 0 24 24">
-                        <path
-                            d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z" />
-                    </svg>
-                </div>
-
-                <div class="cal-day active-heart">
-                    <span>21</span>
-                    <svg class="heart-icon" viewBox="0 0 24 24">
-                        <path
-                            d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z" />
-                    </svg>
-                </div>
+                <div class="cal-day">20</div>
+                <div class="cal-day">21</div>
 
                 <!-- Week 4 -->
                 <div class="cal-day">22</div>
@@ -229,8 +206,21 @@
                 <div class="cal-day">24</div>
                 <div class="cal-day">25</div>
                 <div class="cal-day">26</div>
-                <div class="cal-day">27</div>
-                <div class="cal-day">28</div>
+                <div class="cal-day active-heart">
+                    <span>27</span>
+                    <svg class="heart-icon" viewBox="0 0 24 24">
+                        <path
+                            d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z" />
+                    </svg>
+                </div>
+
+                <div class="cal-day active-heart">
+                    <span>28</span>
+                    <svg class="heart-icon" viewBox="0 0 24 24">
+                        <path
+                            d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z" />
+                    </svg>
+                </div>
 
 
                 <!-- Week 5 -->
@@ -247,13 +237,6 @@
             <!-- Location (Image 2) -->
             <div class="location-section-box" data-aos="fade-up">
                 <h2 class="location-heading">Địa điểm tổ chức</h2>
-                <div class="decorative-divider-custom">
-                    <svg width="100%" height="40" viewBox="0 0 300 40" preserveAspectRatio="none" fill="none" stroke="currentColor" stroke-width="1.5">
-                        <path d="M0,30 Q150,10 260,25" />
-                        <path d="M260,25 C255,15 265,10 270,18 C275,10 285,15 280,25 C280,25 270,35 270,35 C270,35 260,25 260,25" />
-                        <path d="M280,25 Q290,30 300,28" />
-                    </svg>
-                </div>
                 <div class="location-card">
                     <div class="loc-details" style="width: 100%;">
                         <div class="loc-row">
@@ -266,10 +249,10 @@
                             <div class="loc-info">
                                 <h3>NHÀ TRAI</h3>
                                 <p>TẠI TƯ GIA NHÀ TRAI</p>
-                                <p>SỐ 71 ĐƯỜNG 3/2, TỔ 1, KHỐI 28, PHƯỜNG KỲ LỪA, TỈNH LẠNG SƠN</p>
+                                <p>Thôn Đại Lộc, Xã Gia Bình, Bắc Ninh</p>
                             </div>
                             <button class="btn-map-outline"
-                                onclick="window.open('https://maps.app.goo.gl/BpwbHBUeYQqdVmmV9', '_blank')">Xem Chỉ
+                                onclick="window.open('https://maps.app.goo.gl/vJKv8fUTssKQa9Ue8', '_blank')">Xem Chỉ
                                 Đường</button>
                         </div>
                         <div class="loc-divider" style="width: 100%;"></div>
@@ -283,7 +266,7 @@
                             <div class="loc-info">
                                 <h3>NHÀ GÁI</h3>
                                 <p>TẠI TƯ GIA NHÀ GÁI</p>
-                                <p>SỐ 2 PHAN ĐĂNG LƯU, KHU N16, PHƯỜNG KỲ LỬA, TỈNH LẠNG SƠN</p>
+                                <p>Thôn Nội Phú, Gia Bình, Bắc Ninh</p>
                             </div>
                             <button class="btn-map-outline"
                                 onclick="window.open('https://maps.app.goo.gl/8VNVgDb4Zq5nU95VA', '_blank')">Xem Chỉ
@@ -301,18 +284,18 @@
             <div class="couple-divider" data-aos="zoom-in"></div>
 
             <div class="gallery-grid">
-                <div class="gallery-item" data-aos="flip-left" data-aos-duration="1200" data-aos-delay="100">
-                    <img src="images/6.jpg" alt="Wedding Photo 2">
+                <div class="gallery-item" data-aos="zoom-in-up" data-aos-duration="1000">
+                    <img src="images/5.JPG" alt="Wedding Photo 1">
                 </div>
                 <div class="gallery-item" data-aos="zoom-in-right" data-aos-duration="1000" data-aos-delay="200">
-                    <img src="images/8.jpg" alt="Wedding Photo 3">
+                    <img src="images/16.JPG" alt="Wedding Photo 3">
                 </div>
                 <div class="gallery-item" data-aos="flip-right" data-aos-duration="1200" data-aos-delay="300">
-                    <img src="images/9.jpg" alt="Wedding Photo 4">
+                    <img src="images/9.JPG" alt="Wedding Photo 4">
                 </div>
                 <div class="gallery-item" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400">
-                    <img src="images/1.jpg" alt="Wedding Photo 5">
-                </div>
+                    <img src="images/15.JPG" alt="Wedding Photo 5">
+                </div>  
             </div>
         </div>
     </section>
@@ -349,7 +332,7 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="footer-content">
-            <p class="footer-names">Mạnh Kiên & Hoàng Hồng</p>
+            <p class="footer-names">Sỹ Khởi & Nguyễn Hiền</p>
             <p class="footer-tagline">Thank you for being part of our special day</p>
             <div class="footer-social">
                 <a href="#" class="social-icon">
@@ -376,7 +359,7 @@
         </svg>
     </button>
 
-    <audio id="bgMusic" loop autoplay preload="auto">
+    <audio id="bgMusic" autoplay preload="auto">
         <source src="images/leduong.mp3" type="audio/mp3">
     </audio>
 
