--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="THƯ MỜI CƯỚI - SỸ KHỞI & NGUYỄN HIỀN">
     <meta property="og:description" content="Trân trọng kính mời bạn đến dự lễ thành hôn của chúng tôi">
-    <meta property="og:image" content="images/1.1.JPG">
+    <meta property="og:image" content="https://robottest008.github.io/SYKHOI-NGUYENHIEN/images/1.1.JPG">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
 
