--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
     <meta property="og:title" content="THƯ MỜI CƯỚI - SỸ KHỞI & NGUYỄN HIỀN">
     <meta property="og:description" content="Trân trọng kính mời bạn đến dự lễ thành hôn của chúng tôi">
     <meta property="og:image" content="https://robottest008.github.io/SYKHOI-NGUYENHIEN/images/1.1.JPG">
-    <meta property="og:image:width" content="1200">
-    <meta property="og:image:height" content="630">
+    <meta property="og:url" content="https://robottest008.github.io/SYKHOI-NGUYENHIEN/">
+    
+    <!-- Zalo / Google specific -->
+    <meta itemprop="name" content="THƯ MỜI CƯỚI - SỸ KHỞI & NGUYỄN HIỀN">
+    <meta itemprop="description" content="Trân trọng kính mời bạn đến dự lễ thành hôn của chúng tôi">
+    <meta itemprop="image" content="https://robottest008.github.io/SYKHOI-NGUYENHIEN/images/1.1.JPG">
 
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
